fixed scrollbar

--- a/source/Frontend/style/css/modals.css
+++ b/source/Frontend/style/css/modals.css
@@ -212,7 +212,8 @@
 /*End styling upload media modal*/
 /*Begin styling saved entries*/
 .saved_entries {
-  padding-left: 10rem;
+  width: 74%;
+  margin-left: 9rem;
   white-space: nowrap;
   position: relative;
   overflow-x: auto;
